--- a/src/pages/Homepage/homepage.scss
+++ b/src/pages/Homepage/homepage.scss
@@ -5,7 +5,9 @@
   align-items: center;
   justify-content: center;
   background-color: rgb(178, 173, 170);
-  
+  @media (max-width: 1000px) {
+    overflow-x: hidden;
+  }
 
  .cardwrapper{
   width: 300px;
@@ -15,13 +17,23 @@
   justify-content: center;
   flex-direction: row;
   gap: 200px;
+  @media (max-width: 1000px) {
+    flex-direction: column;
+    gap: 50px;
+    
+
+  }
 
   img{
     width: 300px;
     height: 300px;
     
     cursor: pointer;
-    
+    @media (max-width: 400px) {
+      width: 200px;
+      height: 200px;
+      
+    }
 
     
   }
@@ -36,6 +48,9 @@
       color:rgb(0, 0, 0);
       font-size: 60px;
       text-align: center;
+      @media (max-width: 400px) {
+        font-size: 30px;
+      }
     }
 
     button{
